Improve layout and formatted the time

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -9,7 +9,10 @@
 		<link rel="stylesheet" href="./src/styles.css" />
 	</head>
 	<body>
-		<div id="content-container" class="h-full w-full min-h-screen"></div>
+		<div
+			id="content-container"
+			class="h-full w-full min-h-screen flex flex-col"
+		></div>
 		<script type="module" src="./src/index.js"></script>
 	</body>
 </html>
